--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="menu">
-        <img src="" alt="Menu image">
+        <img src="./Assets/logoBig.png" alt="Menu image">
         <p>We Provide The Best Food At The <span>Right Price</span></p>
     </div>
     <div id="">
