--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="menu">
         <img src="./Assets/logoBig.png" alt="Menu image">
-        <p>We Provide The Best Food At The <span>Right Price</span></p>
+        <p>We Provide The Best Food </br>At The <span>Right Price</span></p>
     </div>
     <div id="">
         <div>
