corrects typos on the html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <div>
             <p>Dinner</p>
         </div>
+    </div>
+    <div>
         <table>
             <tr>
                 <td><img src="" alt="fast foods"></td>
