Adds more ids to divs for easier styling

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <img src="./Assets/logoBig.png" alt="Menu image">
         <p>We Provide The Best Food </br>At The <span>Right Price</span></p>
     </div>
-    <div id="">
+    <div id="menu-options">
         <div>
-            <div>Happy Hour</div>
-            <div>Party Time</div>
+            <div id="happy-hour">Happy Hour</div>
+            <div id="party-time">Party Time</div>
         </div>
-        <div>
+        <div id="breakfast">
             <p>Breakfast</p>
         </div>
-        <div>
+        <div id="lunch">
             <p>Lunch</p>
-        </div>
+        </div id="dinner">
         <div>
             <p>Dinner</p>
         </div>
