Addition of the foodtop images

--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
         </div>
         <div id="lunch">
             <p>Lunch</p>
-        </div id="dinner">
-        <div>
+        </div>
+        <div id="dinner">
             <p>Dinner</p>
         </div>
     </div>
     <div>
         <table>
             <tr>
-                <td><img src="" alt="fast foods"></td>
+                <td>
+                    <img src="./Assets/fastFood1.jpg" alt="fast foods">
+                    <img src="./Assets/fastFood2.jpg" alt="fast foods">
+                </td>
                 <td>
                     <h4>Fast Food</h4>
                     <p>You'll love our delicious fast food</p>
@@ -41,7 +44,10 @@
                 </td>
             </tr>
             <tr>
-                <td><img src="" alt="drinks"></td>
+                <td>
+                    <img src="./Assets/drink1.jpg" alt="drinks">
+                    <img src="./Assets/drink2.jpg" alt="drinks">
+                </td>
                 <td>
                     <h4>Drinks</h4>
                     <p>We also produce delicious drinks</p>
