--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
                         elit. Vel velit quidem quod, fugit sed a iusto non 
                         perspiciatis, vero dolorem voluptate, nihil nemo. 
                         Nemo facilis quam enim fugit architecto facere!</p>
+                        <p><a href="">VIEW GALLERY</a></p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <img src="./Assets/drink1.jpg" alt="drinks">
+                </td>
+                <td>
                     <img src="./Assets/drink2.jpg" alt="drinks">
                 </td>
                 <td>
@@ -55,11 +58,12 @@
                         elit. Vel velit quidem quod, fugit sed a iusto non 
                         perspiciatis, vero dolorem voluptate, nihil nemo. 
                         Nemo facilis quam enim fugit architecto facere!</p>
+                        <p><a href="">VIEW GALLERY</a></p>
                 </td> 
             </tr>
         </table>
     </div>
-    <div>
+    <div id="foodsbg">
         <div>
             <table>
                 <tr>
