changes some lines in the html pages to inline display contents

--- a/index.html
+++ b/index.html
@@ -68,20 +68,14 @@
             <table>
                 <tr>
                     <td><p>Fast Food</p></td>
-                </tr>
-                <tr>
                     <td><p>Drinks</p></td>
-                </tr>
-                <tr>
                     <td><p>chicken</p></td>
-                </tr>
-                <tr>
                     <td><p>Rice</p></td>
                 </tr>
             </table>
-            <img src="" alt="Chicken Burger">
-            <img src="" alt="Beef Burger">
-            <img src="" alt="Chicken Pizza">
+            <img src="./Assets/fastfoods/chickenBurger.jpg" alt="Chicken Burger">
+            <img src="./Assets/fastfoods/beefBurger.jpg" alt="Beef Burger">
+            <img src="./Assets/fastfoods/chickenPizza.jpg" alt="Chicken Pizza">
         </div>
     </div>
     <div>
