--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
                 </tr>
             </table>
             <img src="./Assets/fastfoods/chickenBurger.jpg" alt="Chicken Burger">
+            <p>Chicken Burger</p>
             <img src="./Assets/fastfoods/beefBurger.jpg" alt="Beef Burger">
+            <p>Beef Burger</p>
             <img src="./Assets/fastfoods/chickenPizza.jpg" alt="Chicken Pizza">
+            <p>Chicken Pizza</p>
         </div>
     </div>
     <div>
