Adds the customers division

--- a/index.html
+++ b/index.html
@@ -82,8 +82,15 @@
         </div>
     </div>
     <div>
-        <div></div>
-        <div></div>
+        <div>
+            <h5>Our Happy Customers</h5>
+            <p>George Richard</p>
+            <p>Great food! Menu is awesome, their foods are not only great but</br> also in the right price. I'll highly recommend them :)</p>
+        </div>
+        <div>
+            <h5>About Menu</h5>
+            <p>We are menu a little team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisl ut aliquip ex ea commodo conse quat. Duisau tem vel eum iriure dolor in.</p>
+        </div>
     </div>
     <div></div>
     <div>
