Adds the footerlogos on the footer division

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
     <div id="foodsbg">
         <div>
             <table>
-                <tr>
-                    <td><p>Fast Food</p></td>
-                    <td><p>Drinks</p></td>
-                    <td><p>chicken</p></td>
-                    <td><p>Rice</p></td>
-                </tr>
-            </table>
-            <img src="./Assets/fastfoods/chickenBurger.jpg" alt="Chicken Burger">
-            <p>Chicken Burger</p>
-            <img src="./Assets/fastfoods/beefBurger.jpg" alt="Beef Burger">
-            <p>Beef Burger</p>
-            <img src="./Assets/fastfoods/chickenPizza.jpg" alt="Chicken Pizza">
-            <p>Chicken Pizza</p>
+                    <th>
+                        <td><p>Fast Food</p></td>
+                        <td><p>Drinks</p></td>
+                        <td><p>chicken</p></td>
+                        <td><p>Rice</p></td>
+                    </th>
+                    </table>
+                        <img src="./Assets/fastfoods/chickenBurger.jpg" alt="Chicken Burger">
+                        <p>Chicken Burger</p>
+                        <img src="./Assets/fastfoods/beefBurger.jpg" alt="Beef Burger">
+                        <p>Beef Burger</p>
+                        <img src="./Assets/fastfoods/chickenPizza.jpg" alt="Chicken Pizza">
+                        <p>Chicken Pizza</p>
         </div>
     </div>
-    <div>
+    <div id="Customers">
         <div>
             <h5>Our Happy Customers</h5>
             <p>George Richard</p>
@@ -92,13 +92,16 @@
             <p>We are menu a little team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisl ut aliquip ex ea commodo conse quat. Duisau tem vel eum iriure dolor in.</p>
         </div>
     </div>
-    <div></div>
     <div>
-        <img src="" alt="">
+        Get our daily food items delivered to your email
+    </div>
+    <div id="subscribe">
+        <img src="./Assets/backgrounds/subscribe.jpg" alt="subscribe">
         <p>MENU</p>
-        <img src="" alt="Facebook link">
-        <img src="" alt="Twitter link">
-        <img src="" alt="Pinterest link">
+        <p>Thats What We Are</p>
+        <img src="./Assets/footerlogs/facebook.png" alt="Facebook link">
+        <img src="./Assets/footerlogs/twitter.png" alt="Twitter link">
+        <img src="./Assets/footerlogs/pinterest.png" alt="Pinterest link">
         <p>2016 Menu Restaurant</p>
     </div>
 </body>
