Add background images to the footer and subscribe divisions

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             <p>We are menu a little team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisl ut aliquip ex ea commodo conse quat. Duisau tem vel eum iriure dolor in.</p>
         </div>
     </div>
-    <div>
+    <div id="subscribe">
         Get our daily food items delivered to your email
     </div>
-    <div id="subscribe">
+    <div id="footer">
         <img src="./Assets/backgrounds/subscribe.jpg" alt="subscribe">
         <p>MENU</p>
         <p>Thats What We Are</p>
