The customer images are added

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             <h5>Our Happy Customers</h5>
             <p>George Richard</p>
             <p>Great food! Menu is awesome, their foods are not only great but</br> also in the right price. I'll highly recommend them :)</p>
+            <img src="./Assets/customers/p1.png" alt="customer 1">
+            <img src="./Assets/customers/p2.png" alt="customer 2">
+            <img src="./Assets/customers/p3.png" alt="customer 3">
         </div>
         <div>
             <h5>About Menu</h5>
