Add borders and border styling on customer div

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img class="fastfood1" src="./Assets/fastFood1.jpg" alt="fast foods">
                     <img class="fastfood1" src="./Assets/fastFood2.jpg" alt="fast foods">
                 </td>
-                <td id="second">
+                <td>
                     <h4>Fast Food</h4>
                     <p>You'll love our delicious fast food</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing 
@@ -63,11 +63,19 @@
     </div>
     <section id="foodsbg">
         <div class="food-div">
-            <div>
-                <P>Fast Food</P>
-                <p>Drinks</p>
-                <p>chicken</p>
-                <p>Rice</p>
+            <div id="food-types">
+                <div class="foodtypes">
+                    <P>Fast Food</p>
+                </div>
+                <div class="foodtypes">
+                    <p>Drinks</p>
+                </div>
+                <div class="foodtypes">
+                    <p>Chicken</p>
+                </div>
+                <div class="foodtypes">
+                    <p>Rice</p>
+                </div>
             </div>
                 <div id="foodscroll">
                     <div>                        
@@ -86,40 +94,42 @@
         </div>
     </section>
     <div id="customers">
-        <div>
-            <h5>Our Happy Customers</h5>
-            <p>George Richard</p>
-            <p>Great food! Menu is awesome, their foods are not only great but</br> also in the right price. I'll highly recommend them :)</p>
-            <div class="customers-holder">
-                <img src="./Assets/customers/p1.png" alt="customer 1" height="15px">
-                <img src="./Assets/customers/p2.png" alt="customer 2" height="15px">
-                <img src="./Assets/customers/p3.png" alt="customer 3" height="15px">
+        <div class="customers">
+            <div id="customer">
+                <h4>Our Happy Customers</h4>
+                <p>George Richard</p>
+                <p>Great food! Menu is awesome, their foods are not only great but</br> also in the right price. I'll highly recommend them :)</p>
+                <div class="customers-holder">
+                    <img src="./Assets/customers/p1.png" alt="customer 1" height="15px">
+                    <img src="./Assets/customers/p2.png" alt="customer 2" height="15px">
+                    <img src="./Assets/customers/p3.png" alt="customer 3" height="15px">
+                </div>
             </div>
         </div>
-        <div>
-            <h5>About Menu</h5>
-            <p>We are menu a little team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisl ut aliquip ex ea commodo conse quat. Duisau tem vel eum iriure dolor in.</p>
+        <div class="about">
+            <h4>About Menu</h4>
+            <p>We are menu a little team of 7 members.</br> Ut wisi enim ad minim veniam, quis nos </br>trudexer ci tation ullamcorper suscipit lob </br>ortis nisl ut aliquip ex ea commodo conse </br>quat. Duisau tem vel eum iriure dolor in.</p>
         </div>
     </div>
     <div id="subscribe">
         Get our daily food items delivered to your email
     </div>
     <div id="footer">
-        <div class="footer">
-            <img src="./Assets/footerlogs/logo_white.png" alt="subscribe" height="50px" width="50px">
-            <p>MENU</p>
-        </div>
-        <div class="footer">
-            <p>Thats What We Are</p>
-        </div>
-        <div class="footer">
-            <img src="./Assets/footerlogs/facebook.png" alt="Facebook link" height="50px" width="50px">
-            <img src="./Assets/footerlogs/twitter.png" alt="Twitter link" height="50px" width="50px">
-            <img src="./Assets/footerlogs/pinterest.png" alt="Pinterest link" height="50px" width="50px">
-        </div>
-        <div class="footer">
-            <p>2016 Menu Restaurant</p>
-        </div>
+            <div>
+                <img src="./Assets/footerlogs/logo_white.png" alt="subscribe" height="50px" width="50px">
+                <p>MENU</p>
+            </div>
+            <div>
+                <p>Thats What We Are</p>
+            </div>
+            <div>
+                <img src="./Assets/footerlogs/facebook.png" alt="Facebook link" height="50px" width="50px">
+                <img src="./Assets/footerlogs/twitter.png" alt="Twitter link" height="50px" width="50px">
+                <img src="./Assets/footerlogs/pinterest.png" alt="Pinterest link" height="50px" width="50px">
+            </div>
+            <div>
+                <p>2016 Menu Restaurant</p>
+            </div>
     </div>
 </body>
 </html>
