change some background colors and edit footer images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img class="fastfood1" src="./Assets/fastFood1.jpg" alt="fast foods">
                     <img class="fastfood1" src="./Assets/fastFood2.jpg" alt="fast foods">
                 </td>
-                <td>
+                <td id="second">
                     <h4>Fast Food</h4>
                     <p>You'll love our delicious fast food</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing 
@@ -45,13 +45,13 @@
                 </td>
             </tr>
             <tr>
-                <td id="second">
+                <td id="second" class="second">
                     <h4>Drinks</h4>
                     <p>We also produce delicious drinks</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing 
-                        elit. Vel velit quidem quod, fugit sed a iusto non 
-                        perspiciatis, vero dolorem voluptate, nihil nemo. 
-                        Nemo facilis quam enim fugit architecto facere!</p>
+                        elit. Vel </br>velit quidem quod, fugit sed a iusto non 
+                        perspiciatis, vero </br>dolorem voluptate, nihil nemo. 
+                        Nemo facilis quam enim fugit </br>architecto facere!</p>
                         <p><a href="">VIEW GALLERY</a></p>
                 </td> 
                 <td id="drinks">
@@ -122,7 +122,7 @@
             <div>
                 <p>Thats What We Are</p>
             </div>
-            <div>
+            <div class="imagelinks">
                 <img src="./Assets/footerlogs/facebook.png" alt="Facebook link" height="50px" width="50px">
                 <img src="./Assets/footerlogs/twitter.png" alt="Twitter link" height="50px" width="50px">
                 <img src="./Assets/footerlogs/pinterest.png" alt="Pinterest link" height="50px" width="50px">
