push files to gh-pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         elit. Vel velit quidem quod, fugit sed a iusto non 
                         perspiciatis, vero dolorem voluptate, nihil nemo. 
                         Nemo facilis quam enim fugit architecto facere!</p>
-                        <p><a href="">VIEW GALLERY</a></p>
+                        <p><a class="galimages" href="">VIEW GALLERY ➡</a></p>
                 </td>
             </tr>
             <tr>
@@ -52,7 +52,7 @@
                         elit. Vel </br>velit quidem quod, fugit sed a iusto non 
                         perspiciatis, vero </br>dolorem voluptate, nihil nemo. 
                         Nemo facilis quam enim fugit </br>architecto facere!</p>
-                        <p><a href="">VIEW GALLERY</a></p>
+                        <p><a class="galimages" href="">VIEW GALLERY ➡</a></p>
                 </td> 
                 <td id="drinks">
                     <img class="drinks" src="./Assets/drink1.jpg" alt="drinks" height="300px">
@@ -112,7 +112,13 @@
         </div>
     </div>
     <div id="subscribe">
-        Get our daily food items delivered to your email
+        <section>
+            <p>Get our daily food items delivered to your email</p>
+            </section>
+        <section>
+            <input class="input emailinput" value="Your email"></input>
+            <input class="input submit" type="submit" value="Subscribe">
+        </section>
     </div>
     <div id="footer">
             <div>
