--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     </div>
     <div id="menu-options">
         <div class="options">
-            <div class="menu-options" id="happy-hour">Happy Hour</div>
-            <div class="menu-options" id="party-time">Party Time</div>
+            <div class="menu-options options-" id="happy-hour">Happy Hour</div>
+            <div class="menu-options options-" id="party-time">Party Time</div>
         </div>
-        <div class="options food" id="breakfast">
+        <div class="options food options-" id="breakfast">
             <p>Breakfast</p>
         </div>
-        <div class="options food" id="lunch">
+        <div class="options food options-" id="lunch">
             <p>Lunch</p>
         </div>
-        <div class="options food" id="dinner">
+        <div class="options food options-" id="dinner">
             <p>Dinner</p>
         </div>
     </div>
