edit email input

--- a/index.html
+++ b/index.html
@@ -112,7 +112,13 @@
         </div>
     </div>
     <div id="subscribe">
-        Get our daily food items delivered to your email
+        <section>
+            <p>Get our daily food items delivered to your email</p>
+            </section>
+        <section>
+            <input class="input emailinput" value="Your email"></input>
+            <input class="input submit" type="submit" value="Subscribe">
+        </section>
     </div>
     <div id="footer">
             <div>
@@ -131,5 +137,27 @@
                 <p>2016 Menu Restaurant</p>
             </div>
     </div>
+    <!--<div id="subscribe">
+        Get our daily food items delivered to your email
+        <input >
+        </input>
+    </div>
+    <div id="footer">
+            <div>
+                <img src="./Assets/footerlogs/logo_white.png" alt="subscribe" height="50px" width="50px">
+                <p>MENU</p>
+            </div>
+            <div>
+                <p>Thats What We Are</p>
+            </div>
+            <div class="imagelinks">
+                <img src="./Assets/footerlogs/facebook.png" alt="Facebook link" height="50px" width="50px">
+                <img src="./Assets/footerlogs/twitter.png" alt="Twitter link" height="50px" width="50px">
+                <img src="./Assets/footerlogs/pinterest.png" alt="Pinterest link" height="50px" width="50px">
+            </div>
+            <div>
+                <p>2016 Menu Restaurant</p>
+            </div>
+    </div>-->
 </body>
 </html>
