--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         elit. Vel velit quidem quod, fugit sed a iusto non 
                         perspiciatis, vero dolorem voluptate, nihil nemo. 
                         Nemo facilis quam enim fugit architecto facere!</p>
-                        <p><a href="">VIEW GALLERY</a></p>
+                        <p><a class="hrf" href="">VIEW GALLERY</a></p>
                 </td>
             </tr>
             <tr>
@@ -52,7 +52,7 @@
                         elit. Vel </br>velit quidem quod, fugit sed a iusto non 
                         perspiciatis, vero </br>dolorem voluptate, nihil nemo. 
                         Nemo facilis quam enim fugit </br>architecto facere!</p>
-                        <p><a href="">VIEW GALLERY</a></p>
+                        <p><a class="hrf" href="">VIEW GALLERY</a></p>
                 </td> 
                 <td id="drinks">
                     <img class="drinks" src="./Assets/drink1.jpg" alt="drinks" height="300px">
@@ -137,27 +137,5 @@
                 <p>2016 Menu Restaurant</p>
             </div>
     </div>
-    <!--<div id="subscribe">
-        Get our daily food items delivered to your email
-        <input >
-        </input>
-    </div>
-    <div id="footer">
-            <div>
-                <img src="./Assets/footerlogs/logo_white.png" alt="subscribe" height="50px" width="50px">
-                <p>MENU</p>
-            </div>
-            <div>
-                <p>Thats What We Are</p>
-            </div>
-            <div class="imagelinks">
-                <img src="./Assets/footerlogs/facebook.png" alt="Facebook link" height="50px" width="50px">
-                <img src="./Assets/footerlogs/twitter.png" alt="Twitter link" height="50px" width="50px">
-                <img src="./Assets/footerlogs/pinterest.png" alt="Pinterest link" height="50px" width="50px">
-            </div>
-            <div>
-                <p>2016 Menu Restaurant</p>
-            </div>
-    </div>-->
 </body>
 </html>
