correction of minor bugs found

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     </div>
     <div id="menu-options">
         <div class="options">
-            <div class="menu-options" id="happy-hour">Happy Hour</div>
-            <div class="menu-options" id="party-time">Party Time</div>
+            <div class="menu-options option" id="happy-hour">Happy Hour</div>
+            <div class="menu-options option" id="party-time">Party Time</div>
         </div>
-        <div class="options food" id="breakfast">
+        <div class="options food option" id="breakfast">
             <p>Breakfast</p>
         </div>
-        <div class="options food" id="lunch">
+        <div class="options food option" id="lunch">
             <p>Lunch</p>
         </div>
-        <div class="options food" id="dinner">
+        <div class="options food option" id="dinner">
             <p>Dinner</p>
         </div>
     </div>
@@ -41,7 +41,7 @@
                         elit. Vel velit quidem quod, fugit sed a iusto non 
                         perspiciatis, vero dolorem voluptate, nihil nemo. 
                         Nemo facilis quam enim fugit architecto facere!</p>
-                        <p><a class="hrf" href="">VIEW GALLERY</a></p>
+                        <p><a class="hrf" href="">VIEW GALLERY ➟</a></p>
                 </td>
             </tr>
             <tr>
@@ -52,7 +52,7 @@
                         elit. Vel </br>velit quidem quod, fugit sed a iusto non 
                         perspiciatis, vero </br>dolorem voluptate, nihil nemo. 
                         Nemo facilis quam enim fugit </br>architecto facere!</p>
-                        <p><a class="hrf" href="">VIEW GALLERY</a></p>
+                        <p><a class="hrf" href="">VIEW GALLERY ➟</a></p>
                 </td> 
                 <td id="drinks">
                     <img class="drinks" src="./Assets/drink1.jpg" alt="drinks" height="300px">
@@ -101,7 +101,7 @@
                 <p>Great food! Menu is awesome, their foods are not only great but</br> also in the right price. I'll highly recommend them :)</p>
                 <div class="customers-holder">
                     <img src="./Assets/customers/p1.png" alt="customer 1" height="15px">
-                    <img src="./Assets/customers/p2.png" alt="customer 2" height="15px">
+                    <img class="george" src="./Assets/customers/p2.png" alt="customer 2" height="15px">
                     <img src="./Assets/customers/p3.png" alt="customer 3" height="15px">
                 </div>
             </div>
@@ -123,7 +123,7 @@
     <div id="footer">
             <div>
                 <img src="./Assets/footerlogs/logo_white.png" alt="subscribe" height="50px" width="50px">
-                <p>MENU</p>
+                <p id="footmenu">MENU</p>
             </div>
             <div>
                 <p>Thats What We Are</p>
