Change shadow effects of foodtypes div

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <p>Dinner</p>
         </div>
     </div>
+    <!--Fast foods table division-->
     <div id="fastfoods" >
         <table>
-            <tr>
+            <tr id="foodrow">
                 <td class="fastfoods">
                     <img class="fastfood1" src="./Assets/fastFood1.jpg" alt="fast foods">
                     <img class="fastfood1" src="./Assets/fastFood2.jpg" alt="fast foods">
@@ -44,7 +45,7 @@
                         <p><a class="hrf" href="">VIEW GALLERY ➟</a></p>
                 </td>
             </tr>
-            <tr>
+            <tr class="foodrow">
                 <td id="second" class="second">
                     <h4>Drinks</h4>
                     <p>We also produce delicious drinks</p>
@@ -61,6 +62,8 @@
             </tr>
         </table>
     </div>
+    <!--Fast foods end-->
+    <!--Food types div-->
     <section id="foodsbg">
         <div class="food-div">
             <div id="food-types">
@@ -93,6 +96,7 @@
                 </div>
         </div>
     </section>
+    <!--Customers div-->
     <div id="customers">
         <div class="customers">
             <div id="customer">
@@ -111,6 +115,7 @@
             <p>We are menu a little team of 7 members.</br> Ut wisi enim ad minim veniam, quis nos </br>trudexer ci tation ullamcorper suscipit lob </br>ortis nisl ut aliquip ex ea commodo conse </br>quat. Duisau tem vel eum iriure dolor in.</p>
         </div>
     </div>
+    <!--Subscribe div-->
     <div id="subscribe">
         <section>
             <p>Get our daily food items delivered to your email</p>
@@ -120,6 +125,7 @@
             <input class="input submit" type="submit" value="Subscribe">
         </section>
     </div>
+    <!--Footer div-->
     <div id="footer">
             <div>
                 <img src="./Assets/footerlogs/logo_white.png" alt="subscribe" height="50px" width="50px">
